Work on user pages

--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -11,12 +11,7 @@
 					<div class="bg-dashboard dashboardbg">
 						<div class="bg-transparent">
 							<div class="crystalcove">
-								<div class="covertext elika-facility-dashboard">
-									<!-- <span>
-										<strong>Crystal Cove</strong> Newport Coast
-									</span> -->
-									<!-- <elika-facility></elika-facility> -->
-								</div>
+								<div class="covertext elika-facility-dashboard"></div>
 							</div>
 							<div class="myshortcuts">
 								<h3>My Shortcuts <span class="pull-right addsc"><i class="fa fa-plus" aria-hidden="true" ng-click="openShortCutPopup()"></i></span></h3>
