--- a/styles/custom.css
+++ b/styles/custom.css
@@ -873,32 +873,49 @@ a.serplan:hover {
     height: 100%;
 }
 
-.covertext span {
+.covertext .facility_name_location {
     display: table-cell;
     width: 100%;
     height: 100%;
     vertical-align: middle;
-    color: #fff;
+	color: #fff;
+}
+
+.covertext .facility_name_location span.facility_name,
+.covertext .facility_name_location span.facility_location {
+	display: block;
+	line-height: normal;
+	position: relative;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	margin: 0 auto;
+	width: 375px;
+}
+
+.covertext .facility_name_location span.facility_name {   
+    font-size: 40px;   
+    height: 46px;
+	margin-bottom: 15px;
+    font-weight: 500;
     text-transform: uppercase;
-    font-size: 30px;
 }
 
-.covertext span strong {
-    display: block;
-    font-size: 46px;
-    line-height: normal;
-    position: relative;
+.covertext .facility_name_location span.facility_location {
+    font-size: 28px;
+    height: 50px;
+    font-weight: 300;
 }
 
-.covertext span strong:after {
+.covertext .facility_name_location span.facility_location:after {
     position: absolute;
     left: 50%;
-    bottom: -60px;
+    bottom: 0;
     content: "";
-    width: 150px;
-    height: 3px;
+    width: 100px;
+    height: 2px;
     background: #fff;
-    margin-left: -75px;
+    margin-left: -50px;
 }
 
 .myshortcuts {
@@ -3116,12 +3133,8 @@ span.edittxt {
 	right: 17px;
 }
 
-.hometabs .md-tab {
-	pointer-events: auto!important;
-}
-
 .btn-numbers .btn {
-	padding: 8px 14px;
+	padding: 8px 12px;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
@@ -3865,10 +3878,6 @@ span.edittxt {
     }
     .appWrapper.sidebar-sm #header .branding .brand {
         margin-left: 0;
-    }
-    .thumb.thumb-xxll {
-        width: 100px;
-        margin-bottom: 10px;
     }
     .glview md-card:nth-child(4n+4) {
         margin-right: 1.5%;
