--- a/views/tmpl/signup.html
+++ b/views/tmpl/signup.html
@@ -13,16 +13,16 @@
 			<form class="form-validation mt-20" ng-validate="validationOptions" id="signup_form" name="signup_form" ng-submit="submitSignUpForm(user,signup_form)">
 				<div class="overflow">
 					<div class="div-width">
-					<input type="text" name="firstname" class="form-control underline-input" placeholder="First Name" ng-model="user.first_name" required>
+					<input type="text" name="firstname" class="form-control underline-input" placeholder="First Name" maxlength="15" ng-model="user.first_name" required>
 					</div>
 					<div class="div-width">
-					<input type="text" name="lastname" class="form-control underline-input" placeholder="Last Name" ng-model="user.last_name" required>		
+					<input type="text" name="lastname" class="form-control underline-input" placeholder="Last Name" maxlength="15" ng-model="user.last_name" required>		
 					</div>			
 				</div>
 				
 				<div class="overflow">
 					<div class="div-width">
-					<input type="email" name="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>	
+					<input type="email" name="email" class="form-control underline-input" placeholder="Email Address" minlength="6" maxlength="40" ng-model="user.email" required>	
 					</div>
 					<div class="div-width">				
 					<input type="text" name="phonenumber" class="form-control underline-input" ui-mask="999 999 9999" placeholder="Phone Number" ng-model="user.phone" ui-mask-placeholder-char="space" required>
@@ -31,7 +31,7 @@
 				
 				<div class="overflow">
 					<div class="div-width">
-					<input type="text" name="address" class="form-control underline-input" placeholder="Address" ng-model="user.address" required>
+					<input type="text" name="address" class="form-control underline-input" maxlength="127" placeholder="Address" ng-model="user.address" required>
 					</div>
 					<div class="div-width">	
 					<input type="text" name="zipcode" minlength="4" maxlength="6" class="form-control underline-input" placeholder="Zip Code" ng-model="user.zipcode" required>
@@ -40,7 +40,7 @@
 				
 				<div class="overflow">
 					<div class="div-width">	
-					<input type="password" name="password" placeholder="Password" class="form-control underline-input" ng-model="user.password" required>
+					<input type="password" name="password" placeholder="Password" minlength="8" maxlength="16" class="form-control underline-input" ng-model="user.password" required>
 					</div>
 					<div class="div-width">	
 					<input type="password" name="cpassword" placeholder="Confirm Password" class="form-control underline-input" ng-model="user.confirm_password" required>
@@ -70,7 +70,7 @@
 						</select>
 					</div></div>
 					<div class="div-width">
-					<input type="text" name="answer" class="form-control underline-input" placeholder="Answer" ng-model="user.secret_ans" required>
+					<input type="text" name="answer" maxlength="30" class="form-control underline-input" placeholder="Answer" ng-model="user.secret_ans" required>
 					</div>
 				</div>
 				
