--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -81,11 +81,11 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Serial Number <span class="text-danger">*</span></label>
-														<input no-space ng-model="device.serial_no" type="text" name="serial_no" id="" maxlength="32" class="form-control" placeholder="" required>
+														<input no-space ng-model="device.serial_no" type="text" name="serial_no" id="" minlength="6" maxlength="32" class="form-control" placeholder="" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code <span class="text-danger">*</span></label>
-														<input no-space ng-model="device.reg_code" type="text" name="registration" maxlength="32" id="" class="form-control" placeholder="" required>
+														<input no-space ng-model="device.reg_code" type="text" name="registration" minlength="6" maxlength="32" id="" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="row">
