--- a/elika-warehouse/views/tmpl/inventory/edit-device.html
+++ b/elika-warehouse/views/tmpl/inventory/edit-device.html
@@ -113,11 +113,11 @@
 								<div class="row">
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Serial Number <span class="text-danger">*</span></label>
-										<input type="text" name="serial_number" id="" class="form-control" ng-model="device.device_serial_no" disabled>
+										<input type="text" name="serial_number" id="" class="form-control" minlength="6" maxlength="32" ng-model="device.device_serial_no" disabled>
 									</div>
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Registration Code <span class="text-danger">*</span></label>
-										<input type="text" name="registration_code" id="" class="form-control" ng-model="device.device_registration_code" disabled>
+										<input type="text" name="registration_code" id="" class="form-control" minlength="6" maxlength="32" ng-model="device.device_registration_code" disabled>
 									</div>
 								</div>
 								<div class="row">
