--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -43,10 +43,28 @@
 													<input type="text" name="facility_name" maxlength="30" ng-model="facility.facility_name" id="" class="form-control" placeholder=""
 													 required>
 												</div>
-												<div class="form-group">
-													<label for="">Facility Location <span class="text-danger">*</span></label>
-													<input type="text" name="facility_location" id="" maxlength="30" ng-model="facility.facility_location" class="form-control"
-													 placeholder="" required>
+												<div class="row">
+													<div class="form-group col-sm-6 col-md-6">
+														<label for="">Facility Location <span class="text-danger">*</span></label>
+														<input type="text" name="facility_location" id="" maxlength="30" ng-model="facility.facility_location" class="form-control"
+														placeholder="" required>
+													</div>
+													<div class="form-group col-sm-6 col-md-6">
+														<label for="">Facility Photo </label>
+														<div class="profilephoto">
+															<div class="bootstrap-filestyle input-group">
+																<input type="file" accept="image/*" file-model="facility.myFile" id="profilePicAddUpdate" name="fileupload" style="display: none"
+																	onchange="HandleInputTypeFilechange()" tabindex="-1" />
+																<input type="text" class="form-control " id="profilePicFileName" readonly="true" />
+																<span class="group-span-filestyle input-group-btn" tabindex="0" id="fakeBrowse" ng-click="HandleProfilePicAddUpdateClick();">
+																	<label for="profilep-2" class="btn btn-default ">
+																		<span class="glyphicon fa fa-inbox"></span> Find file
+																	</label>
+																</span>
+															</div>
+															
+														</div>
+													</div>
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
@@ -187,3 +205,11 @@
 		</div>
 	</div>
 </div>
+<script>
+	function HandleInputTypeFilechange() {
+            var fileinput = document.getElementById("profilePicAddUpdate");
+            var textinput = document.getElementById("profilePicFileName");
+            textinput.value = fileinput.value;
+            
+        };
+</script>
