--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -180,7 +180,7 @@
 								<div class="glview">
 									<md-content>
 										<md-card ng-repeat="facility in facilities track by facility.facility_id">
-											<a ui-sref="app.admin.facility.facility-details"><img ng-src="images/facility/1.jpg" class="md-card-image" alt="Washed Out"></a>
+											<a ui-sref="app.admin.facility.facility-details"><img ng-src="{{facility.facility_photo ? facility.facility_photo : 'images/facility/1.jpg'}}" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
 												<h2 class="md-title">{{ facility.facility_name }}</h2>
 												<p>{{ facility.facility_location }}</p>
