--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -11,13 +11,14 @@
                     <div class="modal-body mt-5">
                         <div class="form-group">
                             <label for="">Facility Name <span class="text-danger">*</span></label>
-                            <input type="text" name="facility_name" maxlength="30" ng-model="wizard_setup.facility.facility_name" id="" class="form-control"
-                                placeholder="" required>
+                            <input type="text" name="facility_name" maxlength="30" ng-model="wizard_setup.facility.facility_name" ng-trim="false" ng-keypress="trimModel($event,wizard_setup.facility.facility_name)"
+                                id="" class="form-control" placeholder="" required>
                             <span class="error" ng-if="validFacility && addFacility.facility_name.$invalid">Please Enter Facility Name</span>
                         </div>
                         <div class="form-group">
                             <label for="">Facility Location <span class="text-danger">*</span></label>
-                            <input type="text" name="facility_location" id="" maxlength="30" ng-model="wizard_setup.facility.facility_location" class="form-control"
+                            <input type="text" name="facility_location" id="" maxlength="30" ng-model="wizard_setup.facility.facility_location" ng-trim="false"
+                                ng-keypress="trimModel($event,wizard_setup.facility.facility_location)" class="form-control"
                                 placeholder="" required>
                             <span class="error" ng-if="validFacility && addFacility.facility_location.$invalid">Please Enter Facility Location</span>
                         </div>
@@ -32,8 +33,8 @@
                             </div>
                             <div class="form-group col-sm-6 col-md-6">
                                 <label for="">Zip Code <span class="text-danger">*</span></label>
-                                <input ng-keypress="allowNumberOnly($event);" type="text" name="zip_code" id="" maxlength="6" ng-model="wizard_setup.facility.zip_code"
-                                    class="form-control" placeholder="" required>
+                                <input number type="text" name="zip_code" id="" maxlength="6" ng-model="wizard_setup.facility.zip_code" class="form-control"
+                                    placeholder="" required>
                                 <span class="error" ng-if="validFacility && addFacility.zip_code.$invalid">Please Enter Zip Code</span>
                             </div>
                         </div>
@@ -51,7 +52,7 @@
                         <div class="row">
                             <div class="form-group col-sm-6 col-md-6 first">
                                 <label for="">Name <span class="text-danger">*</span></label>
-                                <input type="text" name="door_name" id="door_name" class="form-control" ng-model="doorname" placeholder="" maxlength="30"
+                                <input type="text" name="door_name" id="door_name" class="form-control" ng-model="doorname" ng-trim="false" ng-keypress="trimModel($event,doorname)" placeholder="" maxlength="30"
                                     required>
                                 <span class="error" ng-if="validDoor && door.door_name.$invalid">Please Enter Door Name</span>
                                 <span class="error" ng-if="errormsg">{{errMsg}}</span>
