device plan commented

--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -120,7 +120,7 @@
 									<a ng-click="open();resetDeviceModel();" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Devices</span></a>
 								</div>
 							</li>
-							<li class="addpopup">
+							<!--<li class="addpopup">
 								<div ng-controller="ModalDemo1Ctrl">
 									<script type="text/ng-template" id="myModalContent1.html">
 										<form name="form1" role="form">
@@ -140,7 +140,7 @@
 									</script>
 									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Devices plan</span></a>
 								</div>
-							</li>
+							</li>-->
 						</ul>
 					</div>
 
