--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -346,7 +346,7 @@
 																<div class="row">
 																	<div class="form-group col-sm-6 col-md-7 access_div" ng-hide="userGroup.length">
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-5">
 																		<label for="">Status</label><br/>
@@ -431,7 +431,7 @@
 																<div class="row">
 																	<div class="form-group col-sm-6 col-md-7 phone_div" ng-hide="userGroup.length">
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-5">
 																		<label for="">Status</label><br/>
@@ -592,7 +592,7 @@
 																<div class="row">
 																	<div class="form-group col-sm-6 col-md-6">
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-6">
 																		<label for="">Facility Code</label>
@@ -665,7 +665,7 @@
 																<div class="row">
 																	<div class="form-group col-sm-6 col-md-6 wiegand_div" ng-hide="userGroup.length">
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-6">
 																		<label for="">Facility Code</label>
@@ -745,7 +745,7 @@
 																<div class="row">
 																	<div class="form-group col-sm-6 col-md-6" ng-hide="">
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-6">
 																		<label for="">Facility Code</label>
@@ -826,7 +826,7 @@
 																		</div>
 																		<div class="form-group col-sm-6 col-md-6 ble_div" ng-hide="userGroup.length">
 																			<label for="">Add Schedule</label><br/>
-																			<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																			<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																		</div>
 																	</div>
 																	<div class="row">
