--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -394,7 +394,7 @@
 																	</div>
 																	<div class="form-group col-sm-6 col-md-2" ng-hide="assingned_usergroups.length">
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-2">
 																		<label for="">Status</label><br/>
@@ -481,7 +481,7 @@
 																	</div>
 																	<div class="form-group col-sm-6 col-md-2">
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-2">
 																		<label for="">Status</label><br/>
@@ -653,7 +653,7 @@
 																		<div class="row">
 																			<div class="form-group col-sm-6 col-md-5">
 																				<label for="">Add Schedule</label><br/>
-																				<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																				<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																			</div>
 																			<div class="form-group col-sm-6 col-md-7">
 																				<label for="">Facility Code</label>
@@ -737,7 +737,7 @@
 																	</div>
 																	<div class="form-group col-sm-6 col-md-2">
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-3">
 																		<label for="">Facility Code</label>
@@ -827,7 +827,7 @@
 																	</div>
 																	<div class="form-group col-sm-6 col-md-2">
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-2">
 																		<label for="">Facility Code</label>
@@ -915,7 +915,7 @@
 																	</div>
 																	<div class="form-group col-sm-6 col-md-2">
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																</div>
 																<div class="row">
