--- a/views/tmpl/admin/device/device-settings.html
+++ b/views/tmpl/admin/device/device-settings.html
@@ -954,12 +954,12 @@
 																<div class="row">
 																	<div class="col-sm-12 col-md-6">
 																		<label class="checkbox checkbox-custom-alt">
-																			<input name="customMotionEnabled" ng-model="das_motion_detection['motion-detection']" value="0" type="radio" checked="checked"><i></i> Audio
+																			<input name="customMotionEnabled" ng-model="deviceAdvanceSettingModals.das_motion_detection['motion-detection']" value="0" type="radio" checked="checked"><i></i> Audio
 																		</label>
 																	</div>
 																	<div class="col-sm-12 col-md-6">
 																		<label class="checkbox checkbox-custom-alt">
-																			<input name="customMotionDisabled" ng-model="das_motion_detection['motion-detection']" value="1" type="radio"><i></i> Audio and Video
+																			<input name="customMotionDisabled" ng-model="deviceAdvanceSettingModals.das_motion_detection['motion-detection']" value="1" type="radio"><i></i> Audio and Video
 																		</label>
 																	</div>
 																</div>
