--- a/elika-warehouse/views/tmpl/inventory/view-device.html
+++ b/elika-warehouse/views/tmpl/inventory/view-device.html
@@ -72,11 +72,11 @@
 					</div> 
 					<div class="tile-body text-center bg-blue p-0"> 
 						<ul class="list-inline tbox m-0">
-							<li class="tcol bg-blue dk p-0">
+							<!--li class="tcol bg-blue dk p-0">
 								<a ui-sref="app.inventory.diagnostic">
 									<h2>Diagnostic</h2>
 								</a>
-							</li>
+							</li-->
 							<li class="tcol p-0">
 								<a href="">
 									<h2>Logs</h2>
@@ -146,13 +146,13 @@
 											<p><label>Reg Code</label> {{device.device_registration_code}}</p>
 											<p><label>Account Number/ICCID</label> {{device.device_account_no}}</p>
 											<p><label>Phone Number</label> {{device.device_phone_no}}</p>
-											<p><label>Cell Module</label> {{device.device_cell|warehouseDeviceFeatures}} <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><strong>Reset</strong></a></span></p>
-											<p><label>VoIP</label> {{device.device_voip|warehouseDeviceFeatures}} <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><strong>Reset</strong></a></span></p>
-											<p><label>Camera</label> {{device.device_camera|warehouseDeviceFeatures}} <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><strong>Reset</strong></a></span></p>
-											<p><label>Wiegand</label> {{device.device_wiegand|warehouseDeviceFeatures}} <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><strong>Reset</strong></a></span></p>
-											<p><label>Bluetooth Mac Id</label> {{device.device_mac_address}} <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><strong>Reset</strong></a></span></p>
-											<p><label>Main Board</label> F.W. Rev No. <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><strong>Reset</strong></a></span></p>
-											<p><label>Front Board</label> F.W. Rev No. <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><strong>Reset</strong></a></span></p>
+											<p><label>Cell Module</label> {{device.device_cell|warehouseDeviceFeatures}} <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><!--strong>Reset</strong--></a></span></p>
+											<p><label>VoIP</label> {{device.device_voip|warehouseDeviceFeatures}} <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><!--strong>Reset</strong--></a></span></p>
+											<p><label>Camera</label> {{device.device_camera|warehouseDeviceFeatures}} <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><!--strong>Reset</strong--></a></span></p>
+											<p><label>Wiegand</label> {{device.device_wiegand|warehouseDeviceFeatures}} <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><!--strong>Reset</strong--></a></span></p>
+											<p><label>Bluetooth Mac Id</label> {{device.device_mac_address}} <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><!--strong>Reset</strong--></a></span></p>
+											<!--p><label>Main Board</label> F.W. Rev No. <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><strong>Reset</strong></a></span></p>
+											<p><label>Front Board</label> F.W. Rev No. <span class="pull-right w-60"><a href="" class="text-danger text-sm" style="cursor: no-drop;"><strong>Reset</strong></a></span></p-->
 										</div>
 									</div>
 								</div>
