--- a/elika-warehouse/views/tmpl/administrator/master-admin-profile.html
+++ b/elika-warehouse/views/tmpl/administrator/master-admin-profile.html
@@ -99,18 +99,18 @@
 										<div class="row">
 											<div class="col-sm-6 col-md-6 form-group">
 												<label for="">First Name <span class="text-danger">*</span></label>
-												<input type="text" name="" id="" class="form-control" ng-model="userData.user_first_name">
+												<input type="text" name="" no-space id="" class="form-control" ng-model="userData.user_first_name">
 											</div>
 											<div class="col-sm-6 col-md-6 form-group">
 												<label for="">Last Name <span class="text-danger">*</span></label>
-												<input type="text" name="" id="" class="form-control" ng-model="userData.user_last_name">
+												<input type="text" name=""  id="" class="form-control" ng-model="userData.user_last_name">
 											</div>
 										</div>
 										
 										<div class="row">
 											<div class="col-sm-6 col-md-6 form-group">				
 												<label for="">Email Address <span class="text-danger">*</span></label>
-												<input type="email" name="" id="" class="form-control" ng-model="userData.user_email" disabled="">
+												<input type="email" name="" no-space id="" class="form-control" ng-model="userData.user_email" disabled="">
 											</div>
 											<div class="col-sm-6 col-md-6 form-group">				
 												<label for="">Phone <span class="text-danger">*</span></label>
@@ -120,7 +120,7 @@
 										<div class="row">
 											<div class="col-sm-6 col-md-6 form-group">				
 												<label for="">Zip Code <span class="text-danger">*</span></label>
-												<input type="number" name="" id="" class="form-control" ng-model="userData.user_zipcode">
+												<input type="text" no-space number name="" id="" class="form-control" ng-model="userData.user_zipcode">
 											</div>
 											<div class="col-sm-6 col-md-6 form-group">
 												<label for="">Status <span class="text-danger">*</span></label><br/>
