--- a/elika-warehouse/views/tmpl/administrator/master-admin.html
+++ b/elika-warehouse/views/tmpl/administrator/master-admin.html
@@ -68,7 +68,7 @@
 											<div class="row">
 												<div class="col-sm-6 col-md-6 form-group">
 													<label for="">First Name <span class="text-danger">*</span></label>
-													<input type="text" name="first_name" id="" ng-model="master.first_name" class="form-control" placeholder="" required>
+													<input type="text" no-space name="first_name" id="" ng-model="master.first_name" class="form-control" placeholder="" required>
 												</div>
 												<div class="col-sm-6 col-md-6 form-group">
 													<label for="">Last Name <span class="text-danger">*</span></label>
@@ -79,7 +79,7 @@
 											<div class="row">
 												<div class="col-sm-6 col-md-6 form-group">				
 													<label for="">Email Address <span class="text-danger">*</span></label>
-												<input type="email" name="email" id="" ng-model="master.email" class="form-control" placeholder="" required="">
+												<input type="email" no-space name="email" id="" ng-model="master.email" class="form-control" placeholder="" required="">
 												</div>
 												<div class="col-sm-6 col-md-6 form-group">				
 													<label for="">Phone <span class="text-danger">*</span></label>
@@ -89,7 +89,7 @@
 											<div class="form-group row">
 												<div class="col-sm-6 col-md-6 form-group">				
 													<label for="">Zip Code <span class="text-danger">*</span></label>
-													<input type="number" name="zipcode" id="" ng-model="master.zipcode" class="form-control" maxlength="6" placeholder="" required="">
+													<input type="text" number no-space name="zipcode" id="" ng-model="master.zipcode" class="form-control" minlength="4" maxlength="6" placeholder="" required="">
 												</div>
 												<div class="col-sm-6 col-md-6 form-group">
 													<label for="">Admin Password <span class="text-danger">*</span></label>
@@ -99,16 +99,16 @@
 											<div class="row">
 												<div class="col-sm-6 col-md-6 form-group">
 													<label for="">Password <span class="text-danger">*</span></label>
-													<input type="password" name="password" id="" ng-model="master.password" class="form-control" maxlength="16" placeholder="" required="">
+													<input type="password" no-space name="password" id="" ng-model="master.password" class="form-control" maxlength="16" placeholder="" required="">
 												</div>
 												<div class="col-sm-6 col-md-6 form-group">
 													<label for="">Confirm Password <span class="text-danger">*</span></label>
-													<input type="password" name="confirm_password" id="" ng-model="master.confirm_password" class="form-control" maxlength="16" placeholder="" required="">
+													<input type="password" no-space name="confirm_password" id="" ng-model="master.confirm_password" class="form-control" maxlength="16" placeholder="" required="">
 												</div>
 											</div>		
 											<div class="row">
 												<div class="col-sm-6 col-md-6 form-group">
-													<label for="">Status <span class="text-danger">*</span></label><br/>
+													<label for="" ng-init="master.user_status = 1">Status <span class="text-danger">*</span></label><br/>
 													<div class="btn-group btnrounded" >
 														<label class="btn btn-default" ng-model="master.user_status" uib-btn-radio="1">Active</label>
 														<label class="btn btn-default" ng-model="master.user_status" uib-btn-radio="0">Inactive</label>
@@ -193,7 +193,7 @@
 											<md-card-content>
 												<h2 class="md-title">{{ user.user_first_name + ' ' + user.user_last_name }}</h2>
 												<!-- <p class="ta-c">{{ user.access }}</p> -->
-												<p class="ta-c">{{ user.user_phone_no }}</p>
+												<p class="ta-c">{{ user.user_phone_no | tel }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.administrator.master-admin-profile({user_id:user.user_id})">View</a>
