--- a/views/tmpl/admin/user/view-user.html
+++ b/views/tmpl/admin/user/view-user.html
@@ -28,7 +28,79 @@
 				{{result}}
 			</div>
 		</div>
-
+		<div ng-controller="ModalDemo2Ctrl">
+		<script type="text/ng-template" id="myModalContent2.html">
+			<form name="form1" role="form"  >
+				<div class="modal-header"><h4 class="modal-title custom-font">Add Schedule</h4></div>
+				<div class="modal-body p-30">
+					<div class="overflow check_view">
+						<label for=""><strong>Schedule Type</strong></label>
+						<div class="row">
+							<div class="col-sm-6 col-md-6 form-group" ng-click="custom_schedular()">
+								<label class="checkbox checkbox-custom-alt mb-0" ng-click="visibiltyUserGroup=true">
+									<input name="customRadioAlt" ng-model="schedule.schedule_type" value="ONETIME" type="radio" ng-init="schedule.schedule_type='ONETIME'" ><i></i> One Time
+								</label>
+							</div>
+							<div class="col-sm-6 col-md-6 form-group" ng-click="repetive_schedular()">
+								<label class="checkbox checkbox-custom-alt mb-0" ng-click="visibiltyUserGroup=false">
+									<input name="customRadioAlt" ng-model="schedule.schedule_type" value="REPEATING" type="radio" ><i></i> Repeating
+								</label>
+							</div>
+						</div>
+					</div>
+					<div class="row check_view" ng-init="visibiltyUserGroup=true"  ng-hide="visibiltyUserGroup">
+						<div class="col-sm-6 col-md-6 pr-0 form-group">
+							<label for="">Start Date</label>
+							<div class="input-group" ng-controller="DatepickerDemoCtrl">
+								<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy"  ng-model="schedule.date"  is-open="opened" datepicker-options="dateOptions" close-text="Close" name="date" onkeypress="return false;"/>
+								<span class="input-group-btn">
+									<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
+								</span>
+							</div>
+						</div>
+						<div class="col-sm-1 col-md-1 form-group">&nbsp;</div>
+						<div class="form-group col-sm-6 col-md-5"  ng-init="schedule.no_expirations=1" >
+							<label for="">&nbsp;</label><br/>
+							<label class="checkbox checkbox-custom-alt" style="margin-bottom:8px;">
+								<input name="customRadioAlt" type="checkbox" checked="checked" ng-model="schedule.no_expirations" ng-true-value="1" ng-false-value="0"><i></i> No Expirations
+							</label>											
+						</div>
+						<div class="form-group col-sm-6 col-md-6" ng-hide="schedule.no_expirations">
+							<label for="">Expiration Date</label>
+							<div class="input-group" ng-controller="DatepickerDemoCtrl">
+								<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy"  ng-model="schedule.expiration" is-open="opened" min-date="schedule.schedule_start_date" datepicker-options="dateOptions"  close-text="Close" onkeypress="return false;"/>
+								<span class="input-group-btn">
+									<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
+								</span>
+							</div>
+						</div>
+					</div>
+					<div class="row" >
+						<div class="col-sm-12 col-md-12" >
+							<div class="schedule_scroll">
+								<div id="scheduler_here" class="dhx_cal_container" style='height:300px;' >
+									<div class="dhx_cal_navline">
+										<div class="dhx_cal_prev_button" >&nbsp;</div>
+										<div class="dhx_cal_next_button" >&nbsp;</div>
+										<div class="dhx_cal_today_button" ></div>
+										<div class="dhx_cal_date" style="display: none;"></div>
+									</div>
+									<div class="dhx_cal_header"></div>
+									<div class="dhx_cal_data"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
+					<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c close_add" ng-click="cancel()" ng-hide="schedule.schedule_id"><i class="fa fa-arrow-right" ></i> Save</button>	
+					<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c" ng-click="check_submit(schedule.schedule_id, schedule)" ng-show="schedule.schedule_id"><i class="fa fa-arrow-right"></i> Save</button>	
+				</div>
+			</form>		
+		</script>
+		</div>
+		
 		<div class="row">
 			<div class="col-sm-12 col-md-4">
 				<section class="tile tile-simple">
@@ -105,7 +177,9 @@
 																	<tr ng-repeat="accesscode in access_code_list">
 																		<td>{{accesscode.Access_Code}}</td>
 																		<td>{{accesscode.Door_Name}}</td>
-																		<td class="credintialicon ta-c"></td>
+																		<td class="credintialicon ta-c">
+																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="scheduleviewopen(accesscode.credential_schedule_id, 'view')" ><i class="fa fa-eye" aria-hidden="true"></i></a> 
+																		</td>
 																		<td class="ta-c">{{accesscode.status==0?'Inactive':'Active'}}</td>
 																	</tr>
 																</tbody>
